# llm_knowledge_base_tool

./: .gitignore  ABOUT.md  CLAUDE.md  DEVELOPER.md  LICENSE  PHASE-2-HANDOFF.md  PLAN-wiki-context.md  README.md  SECURITY.md  TODO.md  config.yaml  knowledge-base-bootstrap.md  loom-dev.command  loom-ui-development.command  loom-ui.command  pyproject.toml  vault-ui.command
.claude/: mcp.json  settings.json
.claude/agents/: compiler.md  linter.md  researcher.md
.claude/commands/: compile.md  file-answer.md  ingest.md  lint.md  query.md
demo/: CLAUDE.md  MEMORY.md  README.md  config.yaml
demo/.claude/: mcp.json
demo/.loom/: vms.json
demo/projects/: README.md
demo/raw/: ABOUT.md
demo/wiki/: README.md
loom_design/: enterprise-adoption-research.md  full-repo-audit.md  mobile-ui-research.md  revised-plan-final.md  ui-branch-audit.md
loom_design/logo/: Loom Logo Exploration.html
loom_mcp/: __main__.py  chat.py  notify.py  server.py  subagent_control.py  sync_daemon.py  web.py
loom_mcp/agents/: __init__.py  claude_code.py  codex.py  generic_cli.py
loom_mcp/lib/: frontmatter.py  hashing.py  pages.py  registry.py
loom_mcp/static/: HANDOFF.md  app.js  index.html  manifest.json  style.css  style.ui-branch.css  sw.js
loom_mcp/tests/: test_agent_lifecycle.py  test_chat.py  test_chat_comprehensive.py  test_chat_continuation.py  test_chat_live.py  test_chat_save.py  test_compile.py  test_context_edge_cases.py  test_frontmatter.py  test_functional.py  test_git.py  test_hashing.py  test_image_ingest.py  test_index_and_log.py  test_ingest.py  test_links.py  test_lint.py  test_maintenance.py  test_pages.py  test_web.py  (+13 more)
scripts/: expand_demo_vault.py  populate_vault.py
src-tauri/: Cargo.toml  tauri.conf.json
vault_mcp/: __init__.py  __main__.py  chat.py  server.py  subagent_control.py  web.py
(+153 files in other folders)
