[project]
name = "vault-mcp"
version = "0.1.0"
description = "Local-first personal knowledge base — MCP server for deterministic tools"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "python-frontmatter>=1.1.0",
    "trafilatura>=2.0.0",
    "mdformat>=0.7.19",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]
pdf = [
    "pymupdf4llm>=0.0.17",
]
complex-pdf = [
    "marker-pdf>=1.0.0",
]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "claude-agent-sdk>=0.1.50",
]

[project.scripts]
vault-web = "vault_mcp.web:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["vault_mcp/tests"]
asyncio_mode = "auto"
